<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/recipe_container"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_plannedRecipe"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="centerCrop"
                android:src="@drawable/image_recipe"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ImageStyle" />

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="@dimen/margin_medium"
                android:background="@drawable/circle_button"
                android:src="@drawable/ic_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/favourite_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="@dimen/margin_medium"
                android:background="@drawable/circle_button"
                android:button="@drawable/selector_favourite_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/plan_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="@dimen/margin_medium"
                android:layout_marginEnd="40dp"
                android:background="@drawable/circle_button"
                android:src="@drawable/ic_calender"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/favourite_button" />

            <TextView
                android:id="@+id/tv_recipe_name"
                style="@style/recipeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_medium"
                android:maxWidth="250dp"
                android:maxLines="3"
                android:text="@string/recipe_name"
                android:textSize="@dimen/text_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_plannedRecipe" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_recipe_name">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardView"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="@dimen/margin_tiny"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="@dimen/radius_semi_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_plannedRecipe"
                    app:strokeColor="@color/primary_500"
                    app:strokeWidth="1dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/margin_small"
                            android:src="@drawable/ic_country" />

                        <TextView
                            android:id="@+id/tv_country_name"
                            style="@style/textRecipeDetails"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:fontFamily="@font/ubuntu_regular"
                            android:gravity="center"
                            android:text="@string/country_name"
                            android:textSize="@dimen/text_small" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>



                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardView3"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="@dimen/margin_tiny"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="@dimen/radius_semi_medium"
                    app:strokeColor="@color/primary_500"
                    app:strokeWidth="1dp"
                    tools:ignore="MissingConstraints">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/margin_small"
                            android:contentDescription="TODO"
                            android:src="@drawable/ic_category" />

                        <TextView
                            android:id="@+id/tv_category_name"
                            style="@style/textRecipeDetails"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:fontFamily="@font/ubuntu_regular"
                            android:gravity="center"
                            android:text="@string/desert"
                            android:textSize="@dimen/text_small" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_ingredients"
                style="@style/home_recycle_header_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tv_ingredients"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_ingredients"
                style="@style/HomeRecycleViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/margin_medium"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_ingredients"
                tools:listitem="@layout/item_ingredients" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_ingredients2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/margin_medium"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_instructions"
                tools:listitem="@layout/item_recipe_details" />

            <TextView
                android:id="@+id/tv_instructions"
                style="@style/home_recycle_header_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tv_instructions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/video_layout" />

            <include
                android:id="@+id/video_layout"
                layout="@layout/video_of_cook"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="@dimen/margin_large"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_ingredients" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>